[package]
name = "wasmedge-anna-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.126", features = ["derive", "rc"] }
argh = "0.1.4"
eyre = "0.6.5"
rand = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
rmp-serde = "1.1.1"
uuid = { version = "1.0.0", features = ["v4"] }
anna-api = { git = "https://github.com/second-state/anna-rs", branch = "feat/new_command" }
tokio_wasi = { version = "1.21", features = [
    "rt",
    "net",
    "time",
    "sync",
    "macros",
    "io-util",
] }
chrono = { version = "=0.4.19" }

[workspace]
members = ["example"]
